# Wallpaper-updater

./: README.rst  pyproject.toml
background_wallpaper_updater/: script.py
tests/: test_background_wallpaper_updater.py
